# emt

./: .gitignore  CMakeLists.txt  README.md
code/: container.c  emt.c  emt.h  gpio.c  math.c  state-machine.c
misc/: build  course-notes.md  dependencies  emulation.md  enter  notes.md  pro.md  run-tests
src/: CMakeLists.txt  emt.c
tests/: test_emt.c
